# cs_ops

./: .env.docker  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  test_data_permission_quick.py
.opencode/agent/: bmad-agent-bmad-master.md  bmad-agent-bmm-analyst.md  bmad-agent-bmm-architect.md  bmad-agent-bmm-dev.md  bmad-agent-bmm-pm.md  bmad-agent-bmm-qa.md  bmad-agent-bmm-quick-flow-solo-dev.md  bmad-agent-bmm-sm.md  bmad-agent-bmm-tech-writer.md  bmad-agent-bmm-ux-designer.md  bmad-agent-tea-tea.md
_bmad-output/: phase4-partial-complete.md  project-context.md
_bmad-output/brainstorming/: brainstorming-session-2026-02-25_16-52-20.md
_bmad-output/implementation-artifacts/: code-review-final-report.md  code-review-report-1-1-user-authentication.md  code-review-rereview-report.md  code-review-workflow-completion.md  critical-fixes-verification.md  dev-story-completion-report.md  high-fixes-completion-report.md  sprint-status.yaml  story-1-5-action-items-complete.md  story-1-5-code-review-report.md  story-1-5-complete-report.md  story-1-5-deployment-guide.md  story-1-5-execution-report.md  story-1-5-final-report.md  story-1-5-final-summary.md  story-1-5-login-fix-report.md  story-1-5-typescript-fix-report.md  story-1-5-verification-report.md  story-1-6-code-review-report.md  story-1-6-complete-report.md  story-1-6-fix-report.md  story-1-6-test-execution-complete.md  story-1-6-test-report.md  story-1-7-abc-execution-summary.md  story-1-7-code-review-fix-report.md  story-1-7-complete-report.md  story-1-7-migration-report.md  story-1-7-progress-report.md  story-1-8-code-review-report.md
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-02-27.md  prd-validation-final-report.md  prd.md  product-brief-内部运营中台客户信息管理与运营系统 -2026-02-25_17-41-07.md  ux-design-specification.md
_bmad-output/test-artifacts/: atdd-checklist-1-1-user-authentication.md  atdd-checklist-1-4-data-permission.md  atdd-checklist-1-5-function-permission.md  atdd-checklist-1-7.md  atdd-checklist-1-8.md  atdd-execution-report-1-8.md  automation-summary.md  dependencies-install-report.md  framework-setup-progress.md  p0-p1-test-final-report.md  p0-p1-test-run-report.md  p1-test-supplement-report.md  story-1-7-additional-authorization-fix-report.md  story-1-7-atdd-execution-final-report.md  story-1-7-atdd-test-execution-report.md  story-1-7-automated-test-report.md  story-1-7-complete-test-summary.md  story-1-7-final-execution-report.md  story-1-7-final-success-report.md  story-1-7-final-validation-report.md  tea-automate-completion-report.md  test-design-architecture.md  test-design-progress.md  test-design-qa.md  test-execution-complete-report.md  test-run-final-summary.md  test-run-status-report.md  test-verification-complete-100percent.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
backend/: .env.example  .env.production  Dockerfile  __init__.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 004_add_org_id_to_users.py  005_create_role_permissions.py  006_create_orgs_and_customers.py  007_create_permission_matrix.py  008_create_roles_table.py  3666a9a9ed2a_create_users_table.py  710228662a7a_add_permission_audit_logs_table.py  7f7a503fce4d_.py
backend/app/: __init__.py  database.py  main.py
backend/app/config/: __init__.py  settings.py
backend/app/database/migrations/: add_additional_authorization_field.py  add_role_hierarchy_fields.py
backend/app/jobs/: cleanup_blacklist.py
backend/app/middleware/: __init__.py  auth_middleware.py  permission_matrix_middleware.py  permission_middleware.py
backend/app/models/: __init__.py  base.py  customer.py  organization.py  permission_audit_log.py  permission_matrix.py  role_permission.py  roles.py  token_blacklist.py  user.py
backend/app/routes/: __init__.py  auth_routes.py  customer_routes.py  customer_routes_example.py  permission_audit_routes.py  permission_inheritance_routes.py  permission_matrix_routes.py  permission_routes.py  role_management_routes.py
backend/app/schemas/: __init__.py  auth.py  permission.py  permission_matrix.py  role_management.py
backend/app/services/: __init__.py  auth_service.py  permission_audit_service.py  permission_inheritance_service.py  permission_matrix_service.py  permission_service.py  role_management_service.py  token_blacklist_service.py  token_service.py
backend/app/utils/: __init__.py  data_permission_filter.py  password.py  permission_cache.py  response.py
backend/migrations/versions/: 001_create_users_table.py  002_create_token_blacklist_table.py
backend/scripts/: create_default_users.py
backend/tests/: conftest.py  test_permission_matrix_middleware.py  test_permission_matrix_service.py  test_role_management_routes.py  test_role_management_service.py
backend/tests/integration/: test_data_permission_integration.py  test_token_refresh_flow.py
backend/tests/unit/: test_auth_middleware.py  test_auth_service.py  test_permission_service.py  test_token_service.py
docs/: DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_QUICKSTART.md  README.md  architecture.md  development.md
frontend/: .env.example  .eslintrc.cjs  .gitignore  .prettierrc.json  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: deploy-prod.sh  deploy.sh
tests/: README.md  conftest.py  global-setup.ts
(+97 files in other folders)
